Restart API, add rapier and physx